--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
-    <string name="app_name">Orbit Simulator</string>
+    <string name="app_name" translatable="false">Orbit Simulator</string>
     <string name="stop">STOP</string>
     <string name="start">START</string>
     <string name="vertical">Vertical</string>
     <string name="speed">Speed</string>
     <string name="horizontal">Horizontal</string>
     <string name="controls">Controls</string>
-    <string name="_00">00</string>
-    <string name="falta_implementar">FALTA IMPLEMENTAR</string>
     <string name="exit">EXIT</string>
+    <string name="element">Element</string>
+    <string name="geometry">Geometry</string>
+    <string name="settings">Settings</string>
+    <string name="element_size">Size</string>
+    <string name="minimum">Minimum</string>
+    <string name="maximum">Maximum</string>
 </resources>
