--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="element_size">Size</string>
     <string name="minimum">Minimum</string>
     <string name="maximum">Maximum</string>
+    <string name="configuration">Configuration</string>
 </resources>
