Criação de um fragment dinâmico em susbtituição ao modelo estático que estava sendo aplicado com o uso de include, sendo substituído por FrameLayout e necessitando da criação de um Fragment personalizado

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -12,5 +12,5 @@
     <string name="settings">Configurações</string>
     <string name="element_size">Tamanho</string>
     <string name="minimum">Mínimo</string>
-    <string name="maximum">Máximo</string>
+    <string name="maximum">áximo</string>
 </resources>
