Implementação da comunicação do fragment com a Activity e modificação da Classe Geometry, além de apagar as classes não implementada ou não mais em uso como a interface de tipos de elementos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="element_size">Size</string>
     <string name="minimum">Minimum</string>
     <string name="maximum">Maximum</string>
-    <string name="configuration">Configuration</string>
+    <string name="configuration">Settings</string>
+    <string name="apply_changes">Change Size</string>
 </resources>
