--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -12,5 +12,7 @@
     <string name="settings">Configurações</string>
     <string name="element_size">Tamanho</string>
     <string name="minimum">Mínimo</string>
-    <string name="maximum">áximo</string>
+    <string name="maximum">Máximo</string>
+    <string name="configuration">Configuração</string>
+    <string name="apply_changes">Atualizar Tamanho</string>
 </resources>
