Alterações nos controles de cor e refatoração de classes. Classe de cor foi modificada para usar cores em int no padrão Android Color.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -15,4 +15,5 @@
     <string name="maximum">Máximo</string>
     <string name="configuration">Configuração</string>
     <string name="apply_changes">Atualizar Tamanho</string>
+    <string name="reset_color">Redefinir Cores</string>
 </resources>
